changed textures format
TGA -> PNG

--- a/Jin Engine/Jin Engine/Jin Engine.vcxproj.filters
+++ b/Jin Engine/Jin Engine/Jin Engine.vcxproj.filters
@@ -200,10 +200,8 @@
     <CustomBuild Include="Shader\verticalBlur.frag">
       <Filter>Source Files\Shader</Filter>
     </CustomBuild>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Shader\holePatching.frag">
+    <CustomBuild Include="Shader\holePatching.frag">
       <Filter>Source Files\Shader</Filter>
-    </None>
+    </CustomBuild>
   </ItemGroup>
 </Project>
